--- a/HelloWorld/pom.xml
+++ b/HelloWorld/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>HelloWorld_1_Java</module>
+        <module>ShiroLearn</module>
     </modules>
 
 
