--- a/HelloWorld/ShiroLearn/pom.xml
+++ b/HelloWorld/ShiroLearn/pom.xml
@@ -28,6 +28,13 @@
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>1.7.25</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.11</version>
+            </dependency>
+
 
         </dependencies>
 
