JDK8 函数式编程 基础对象  Consumer Function Predicte

--- a/HelloWorld/ShiroLearn/src/main/resources/DbShiro.ini
+++ b/HelloWorld/ShiroLearn/src/main/resources/DbShiro.ini
@@ -1,3 +1,8 @@
 [main]
+credentialsMatcher=org.apache.shiro.authc.credential.HashedCredentialsMatcher
+credentialsMatcher.hashAlgorithmName=md5 #加密方式
+credentialsMatcher.hashIterations=3 #刚才我们指定的加密次数
+credentialsMatcher.storedCredentialsHexEncoded=true
+
 databaseRealm=com.zhenshen.ByDatebase.dao.DatabaseRealm
 securityManager.realms=$databaseRealm
